# FunctionBox

./: README.md  build.gradle
app/: .gitignore  CMakeLists.txt  build.gradle
app/src/androidTest/java/com/yu/functionbox/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/yu/functionbox/: FunctionBoxApplication.java  FunctionBoxApplication.kt  Leecode.java  MainActivity.java
app/src/main/java/com/yu/functionbox/adapter/: DbAdapter.java  FunctionAdapter.java  FunctionAdapterAdapter.java  ScenesAdapter.java  ScenesAdapterAdapter.java  SortAdapter.java  SortAdapterAdapter.java
app/src/main/java/com/yu/functionbox/base/: BaseAdapter.java  BaseAdapterWithFooter.java  BaseBizCallback.java  BaseBizResult.java  BizCallback.java  BizResult.java  BusinessId.java  HeaderFooterAdapter.java
app/src/main/java/com/yu/functionbox/data/: Function.java  FunctionBean.java  FunctionBean.kt  SceneBean.java  SceneBean.kt  Scenes.java  ScenesBean.java  SortBean.java  SortBean.kt
app/src/main/res/drawable/: btn_style_normal.xml  btn_style_select.xml  corner.xml  item_normal.xml  item_selected.xml  selector_item.xml  selector_item_bg.xml
app/src/main/res/layout/: activity_function.xml  activity_main.xml  dialog_input.xml  dialog_normal.xml  item_db.xml  item_footer.xml  item_function.xml  item_header.xml  item_scene.xml  item_simple.xml  item_sort.xml  view_title.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/com/yu/functionbox/: ExampleUnitTest.java  LeecodeTest.java
(+46 files in other folders)
